Add CSS hacks to fade-semi-out.
Times where we want to start with code, then fade bits out. Adding both fade-out
and fade-semi-out classes does this.

Can probably tweak CSS to only need fade-semi-out, but really, who's got the
time.

--- a/css/tweaks.css
+++ b/css/tweaks.css
@@ -53,6 +53,17 @@ div.left {
     display: none;
 }
 
+/* Start displayed, then fade semi-out */
+.reveal .slides section .fragment.fade-out.fade-semi-out.current-fragment {
+    opacity: 0.5;
+    visibility: inherit;
+}
+
+.reveal .slides section .fragment.fade-out.fade-semi-out.visible {
+    opacity: 0.5;
+    visibility: inherit;
+}
+
 .strikethrough {
     text-decoration: line-through;
 }
